force-app/main/default/objects/FieloPLT__Criterion__c/FieloPLT__Criterion__c.object-meta.xml
<CustomObject>
    <description>It enables establishing different criteria in Rules, Missions, Segments and Levels.</description>
    <label>Criterion</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Criterion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>