force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__BooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, it stores a Criterion boolean value.</description>
    <inlineHelpText>If ticked, it stores a Criterion boolean value.</inlineHelpText>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>