force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__CriterionGroup__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__CriterionGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It relates a Criterion to a Criterion Group.</description>
    <inlineHelpText>Choose the Criterion related to the Criterion Group.</inlineHelpText>
    <label>Criterion Group</label>
    <referenceTo>FieloPLT__CriterionGroup__c</referenceTo>
    <relationshipLabel>Criteria</relationshipLabel>
    <relationshipName>Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>