force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__DateValue__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__DateValue__c</fullName>
    <description>It stores a date value for the Criterion.</description>
    <inlineHelpText>It stores a date value for the Criterion.</inlineHelpText>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>