force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>It displays the Criterion detailed description.</description>
    <inlineHelpText>Enter the Criterion detailed description.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>