force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__FieldName__c</fullName>
    <description>Criterion field applied to the Action, which varies depending on the Action object. Field Name enables 1st-level filtering by lookup fields.</description>
    <inlineHelpText>Choose a Criterion field applied to the Action. This field varies depending on the Action object and it allows 1st-level filtering by lookup fields.</inlineHelpText>
    <label>Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>