force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__FieldType__c</fullName>
    <description>Compared field type.</description>
    <inlineHelpText>Compared field type.</inlineHelpText>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>