force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__IsField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, &quot;Value&quot; becomes a picklist of fields from the same object as &quot;Field Name&quot;.</description>
    <inlineHelpText>Tick this box to compare the value of Field Name with the value of another field from the same object.</inlineHelpText>
    <label>Field</label>
    <type>Checkbox</type>
</CustomField>