force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__Level__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It relates a Criterion to a particular Level.</description>
    <inlineHelpText>Choose a Criterion for the Level.</inlineHelpText>
    <label>Level</label>
    <referenceTo>FieloPLT__Level__c</referenceTo>
    <relationshipLabel>Level Criteria</relationshipLabel>
    <relationshipName>LevelCriteria</relationshipName>
    <type>Lookup</type>
</CustomField>