force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__Mission__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Mission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It relates a Criterion to a particular Mission.</description>
    <inlineHelpText>It shows the Criterion related to a particular Mission.</inlineHelpText>
    <label>Mission</label>
    <referenceTo>FieloPLT__Mission__c</referenceTo>
    <relationshipLabel>Criteria</relationshipLabel>
    <relationshipName>MissionCriteria</relationshipName>
    <type>Lookup</type>
</CustomField>