force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__Name__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Id, FieloPLT__FieldName__c + &apos; &apos; + Text(FieloPLT__Operator__c ) + &apos; &apos; + FieloPLT__Values__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>