force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__NumberValue__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__NumberValue__c</fullName>
    <description>It stores a Criterion number value.</description>
    <inlineHelpText>It stores a Criterion number value.</inlineHelpText>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>