force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__Operator__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Operator__c</fullName>
    <description>Criterion relational operator (E.g. &quot;equal to&quot;, &quot;greater than&quot;, etc.).</description>
    <inlineHelpText>Choose a relational operator.</inlineHelpText>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>not contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>