force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Order__c</fullName>
    <description>Criteria order.</description>
    <inlineHelpText>Criteria order.</inlineHelpText>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>