force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates a Rule to a Criterion.</description>
    <inlineHelpText>Choose a Rule for the Criterion.</inlineHelpText>
    <label>Rule</label>
    <referenceTo>FieloPLT__Rule__c</referenceTo>
    <relationshipLabel>RuleCriteria</relationshipLabel>
    <relationshipName>RuleCriteria</relationshipName>
    <type>Lookup</type>
</CustomField>