force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__Segment__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It relates a Criterion to a particular Segment.</description>
    <inlineHelpText>Choose a Segment for the Criterion.</inlineHelpText>
    <label>Segment</label>
    <referenceTo>FieloPLT__Segment__c</referenceTo>
    <relationshipLabel>Criteria</relationshipLabel>
    <relationshipName>SegmentCriteria</relationshipName>
    <type>Lookup</type>
</CustomField>