force-app/main/default/objects/FieloPLT__Criterion__c/fields/FieloPLT__Values__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Values__c</fullName>
    <description>A specific Criterion Value which can be entered, set or choosen.</description>
    <inlineHelpText>Enter, set or choose a Value for the Criterion.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>